tests/frontend/fail/array/out_of_bounds_returns.act
contract B

constructor
interface constructor()

creates

  int[2] a := [0,0]

transition f
interface f()


case a[0] < 0:

returns post(a[100])
